[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://Dialogue.tscn" type="PackedScene" id=10]

[node name="Main" type="YSort"]
script = ExtResource( 1 )
level = "Grandmas House (Default)"

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 256, 128 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -33.21

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Dialogue" parent="." instance=ExtResource( 10 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[connection signal="dialogue_finished" from="Dialogue" to="." method="_on_Dialogue_dialogue_finished"]
[connection signal="dialogue_started" from="Dialogue" to="." method="_on_Dialogue_dialogue_started"]
